--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <section class=" slider_section position-relative">
       <div class="slider_container">
         <div class="img-box">
-          <img src="images/hero-img.jpg" alt="">
+          <img src="https://wallpapercrafter.com/desktop/201968-a-taxi-crossing-an-intersection-in-new-york-city-b.jpg" alt="">
         </div>
         <div class="detail_container">
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -176,10 +176,10 @@
   <section class="car_section layout_padding2-top layout_padding-bottom">
     <div class="container">
       <div class="heading_container">
-        <h2>
+        <h2 class="text-light text-center">
           Ditch the Hassle, Rent a Cab!
         </h2>
-        <p>
+        <p class="text-center">
           Affordable & Reliable Rides Whenever You Need Them. Book Now!
         </p>
       </div>
