--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
   <section class="blog_section layout_padding">
     <div class="container">
       <div class="heading_container">
-        <h2>
+        <h2 class="text-light text-center">
           What Our cutsomers says
         </h2>
         <p>
@@ -412,7 +412,7 @@
             <div class="item">
               <div class="box">
                 <div class="date-box">
-                  <h6>
+                  <h6 class="text-light">
                     04 Nov 2023
                   </h6>
                 </div>
@@ -431,7 +431,7 @@
             <div class="item">
               <div class="box">
                 <div class="date-box">
-                  <h6>
+                  <h6 class="text-light">
                     04 Jan 2024
                   </h6>
                 </div>
@@ -450,7 +450,7 @@
             <div class="item">
               <div class="box">
                 <div class="date-box">
-                  <h6>
+                  <h6 class="text-light">
                     08 March 2024
                   </h6>
                 </div>
@@ -469,7 +469,7 @@
             <div class="item">
               <div class="box">
                 <div class="date-box">
-                  <h6>
+                  <h6 class="text-light">
                     23 May 2024
                   </h6>
                 </div>
