--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container">
           <a class="navbar-brand" href="index.html">
-            <span>
+            <span class="text-light">
               Divine cabs
             </span>
           </a>
@@ -80,8 +80,8 @@
                 <div class="detail-box">
                   <h1>
                     Book Cab <br>
-                    Experts <br>
-                    Service
+                    For  <br>
+                    Tour
                   </h1>
                   <a href="contact.html">
                     Contact Us
@@ -91,9 +91,9 @@
               <div class="carousel-item">
                 <div class="detail-box">
                   <h1>
-                    Cabs <br>
-                    At <br>
-                    best price
+                   Book Cabs <br>
+                    For <br>
+                    Trip
                   </h1>
                   <a href="contact.html">
                     Contact Us
@@ -103,9 +103,9 @@
               <div class="carousel-item">
                 <div class="detail-box">
                   <h1>
-                    Less Fare <br>
-                    More <br>
-                    Fun
+                    Book cab<br>
+                    For <br>
+                    Travel
                   </h1>
                   <a href="contact.html">
                     Contact Us
@@ -400,7 +400,7 @@
         <h2 class="text-light text-center">
           What Our cutsomers says
         </h2>
-        <p>
+        <p class="text-center">
        We are dedicated to provide our customers best guide
         </p> 
       </div>
@@ -498,7 +498,7 @@
   <section class="us_section">
     <div class="container">
       <div class="heading_container">
-        <h2>
+        <h2 class="text-light">
           Why choose Us
         </h2>
         <p>
