--- a/index.html
+++ b/index.html
@@ -35,17 +35,13 @@
     <header class="header_section">
       <div class="container-fluid">
         <nav class="navbar navbar-expand-lg custom_nav-container">
-          <a class="navbar-brand" href="index.html">
-            <span class="text-light">
-              Divine cabs
-            </span>
-          </a>
+          
 
           <div class="navbar-collapse" id="">
             <div class="user_option">
               
             </div>
-            <div class="custom_menu-btn">
+            <div class="custom_menu-btn text-light ">
               <button onclick="openNav()">
                 <span class="s-1"> </span>
                 <span class="s-2"> </span>
@@ -63,6 +59,11 @@
               </div>
             </div>
           </div>
+          <a class="navbar-brand mt-5" href="index.html">
+            <span class="text-light">
+              Divine Cabs
+            </span>
+          </a>
         </nav>
       </div>
     </header>
@@ -633,22 +634,22 @@
         <div class="social-box">
           <div>
             <a href="">
-              <img src="images/fb.png" alt="">
+              <img src="https://img.icons8.com/?size=100&id=118497&format=png&color=000000" alt="">
             </a>
           </div>
           <div>
             <a href="">
-              <img src="images/twitter.png" alt="">
+              <img src="https://img.icons8.com/?size=100&id=111056&format=png&color=000000" alt="">
             </a>
           </div>
           <div>
             <a href="">
-              <img src="images/linkedin.png" alt="">
+              <img src="https://img.icons8.com/?size=100&id=13930&format=png&color=000000" alt="">
             </a>
           </div>
           <div>
             <a href="">
-              <img src="images/insta.png" alt="">
+              <img src="https://img.icons8.com/?size=100&id=Xy10Jcu1L2Su&format=png&color=000000" alt="">
             </a>
           </div>
         </div>
