--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             </div>
             <div class="custom_menu-btn text-light ">
               <button onclick="openNav()">
-                <span class="s-1"> </span>
-                <span class="s-2"> </span>
-                <span class="s-3"> </span>
+                <span class="s-1 text-white"> </span>
+                <span class="s-2 text-white"> </span>
+                <span class="s-3 text-white"> </span>
               </button>
             </div>
             <div id="myNav" class="overlay">
