--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- header section strats -->
     <header class="header_section">
       <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg custom_nav-container">
+        <nav class="navbar navbar-expand-lg custom_nav-container text-light">
           
 
           <div class="navbar-collapse" id="">
