--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             </div>
             <div class="custom_menu-btn text-light ">
               <button onclick="openNav()">
-                <span class="s-1 text-white bg-light"> </span>
-                <span class="s-2 text-white bg-light"> </span>
-                <span class="s-3 text-white bg-light"> </span>
+                <span class="s-1 text-white bg-light shadow"> </span>
+                <span class="s-2 text-white bg-light shadow"> </span>
+                <span class="s-3 text-white bg-light shadow"> </span>
               </button>
             </div>
             <div id="myNav" class="overlay">
@@ -60,7 +60,7 @@
             </div>
           </div>
           <a class="navbar-brand mt-5" href="index.html">
-            <span class="text-light">
+            <span class="text-light shadow">
               Divine Cabs
             </span>
           </a>
