--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             </div>
             <div class="custom_menu-btn text-light ">
               <button onclick="openNav()">
-                <span class="s-1 text-white bg-light shadow"> </span>
-                <span class="s-2 text-white bg-light shadow"> </span>
-                <span class="s-3 text-white bg-light shadow"> </span>
+                <span class="s-1 text-white  shadow"> </span>
+                <span class="s-2 text-white  shadow"> </span>
+                <span class="s-3 text-white  shadow"> </span>
               </button>
             </div>
             <div id="myNav" class="overlay">
@@ -60,7 +60,7 @@
             </div>
           </div>
           <a class="navbar-brand mt-5" href="index.html">
-            <span class="text-light shadow">
+            <span class="text-dark shadow-sm">
               Divine Cabs
             </span>
           </a>
@@ -72,7 +72,7 @@
     <section class=" slider_section position-relative">
       <div class="slider_container">
         <div class="img-box">
-          <img src="https://wallpapercrafter.com/desktop/201968-a-taxi-crossing-an-intersection-in-new-york-city-b.jpg" alt="">
+          <img src="../images/hero-img.jpg" alt="">
         </div>
         <div class="detail_container">
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
