--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <section class=" slider_section position-relative">
       <div class="slider_container">
         <div class="img-box">
-          <img src="/images/hero-img.jpg" alt="">
+          <img src="images/hero-img.jpg" alt="">
         </div>
         <div class="detail_container">
           <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
