--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <link href="css/responsive.css" rel="stylesheet" />
 </head>
 
-<body>
+<body class="text-black bg-white" >
   <div class="hero_area">
     <!-- header section strats -->
     <header class="header_section">
@@ -177,14 +177,14 @@
   <section class="car_section layout_padding2-top layout_padding-bottom">
     <div class="container">
       <div class="heading_container">
-        <h2 class="text-light text-center">
+        <h2 class="text-dark text-center bg-dark">
           Ditch the Hassle, Rent a Cab!
         </h2>
         <p class="text-center">
           Affordable & Reliable Rides Whenever You Need Them. Book Now!
         </p>
       </div>
-      <div class="car_container">
+      <div class="car_container text-white bg-black">
         <div class="box">
           <div class="img-box">
             <img src="images/c-1.png" alt="">
