--- a/index.html
+++ b/index.html
@@ -174,10 +174,10 @@
 
   <!-- car section -->
 
-  <section class="car_section layout_padding2-top layout_padding-bottom">
+  <section class="car_section layout_padding2-top layout_padding-bottom text-dark">
     <div class="container">
       <div class="heading_container">
-        <h2 class="text-dark text-center bg-dark">
+        <h2 class="text-light text-center">
           Ditch the Hassle, Rent a Cab!
         </h2>
         <p class="text-center">
@@ -239,7 +239,7 @@
 
   <!-- about section -->
 
-  <section class="about_section layout_padding-bottom">
+  <section class="about_section layout_padding-bottom text-dark">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-7 px-0">
@@ -268,7 +268,7 @@
 
   <!-- best section -->
 
-  <section class="best_section">
+  <section class="best_section text-dark">
     <div class="container">
       <div class="book_now">
         <div class="detail-box">
@@ -413,7 +413,7 @@
             <div class="item">
               <div class="box">
                 <div class="date-box">
-                  <h6 class="text-light">
+                  <h6 class="text-dark">
                     04 Nov 2023
                   </h6>
                 </div>
@@ -432,7 +432,7 @@
             <div class="item">
               <div class="box">
                 <div class="date-box">
-                  <h6 class="text-light">
+                  <h6 class="text-dark">
                     04 Jan 2024
                   </h6>
                 </div>
@@ -451,7 +451,7 @@
             <div class="item">
               <div class="box">
                 <div class="date-box">
-                  <h6 class="text-light">
+                  <h6 class="text-dark">
                     08 March 2024
                   </h6>
                 </div>
@@ -470,7 +470,7 @@
             <div class="item">
               <div class="box">
                 <div class="date-box">
-                  <h6 class="text-light">
+                  <h6 class="text-dark">
                     23 May 2024
                   </h6>
                 </div>
@@ -499,7 +499,7 @@
   <section class="us_section">
     <div class="container">
       <div class="heading_container">
-        <h2 class="text-light">
+        <h2 class="text-dark bg-light">
           Why choose Us
         </h2>
         <p>
