--- a/index.html
+++ b/index.html
@@ -177,14 +177,14 @@
   <section class="car_section layout_padding2-top layout_padding-bottom text-dark">
     <div class="container">
       <div class="heading_container">
-        <h2 class="text-light text-center">
+        <h2 class="text-dark text-center">
           Ditch the Hassle, Rent a Cab!
         </h2>
         <p class="text-center">
           Affordable & Reliable Rides Whenever You Need Them. Book Now!
         </p>
       </div>
-      <div class="car_container text-white bg-black">
+      <div class="car_container text-dark ">
         <div class="box">
           <div class="img-box">
             <img src="images/c-1.png" alt="">
@@ -395,10 +395,10 @@
 
   <!-- blog section -->
 
-  <section class="blog_section layout_padding">
+  <section class="blog_section layout_padding text-dark">
     <div class="container">
       <div class="heading_container">
-        <h2 class="text-light text-center">
+        <h2 class="text-dark text-center">
           What Our cutsomers says
         </h2>
         <p class="text-center">
